# url-health-monitor

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  url_checks.db
backend/: db.py  health_checks.py  main.py  mock_service.py  types.py  url_classifier.py
frontend/: app.py
